2016-08-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    In _do_banksel function, case of PIC16E family use RELOC_MOVLB
    instead of RELOC_BANKSEL.

  * libgputils/gpcofflink.c:
    A little simplification.

  * libgputils/gpcofflink.c, libgputils/gpopcode.h:
    Use more constants.

  * libgputils/gpprocessor.c:
    In the _reloc_movlb_pic16e function use the correct
    PIC16E_BMSK_MOVLB value intead of the too general 0xff.

2016-08-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gplink/cod.c, gputils/dump.c, gputils/gpvc.c,
    libgputils/gpcod.c, libgputils/gpsystem.c, libgputils/gpsystem.h:
    The gp_str_from_Pstr and gp_Pstr_from_str functions got a new
    parameter.

  * libgputils/gpbitarray.c:
    Minor optimization.

2016-08-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx
    Removed the experimental state from 3.6.5 and 3.6.7 sections.

  * gpasm/cod.c, gpasm/directive.c, gplink/cod.c, gputils/dump.c,
    gputils/gpvc.c, libgputils/gpcod.c, libgputils/gpcod.h:
    Some renaming of constants and bugfix.

2016-08-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gplink/cod.c, gputils/dump.c, libgputils/gpcod.c,
    libgputils/gpcod.h:
    The length of source file names in .cod file, now 256 bytes long
    instead of 64 bytes. The gpvc utility thereafter also able to
    correctly detect the shorter names.

2016-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c, gpasm/gpmsg.c:
    bugfix

  * configure.ac, configure:
    New option: --enable-gdb-debuginfo

  * gpasm/lst.c:
    Code formatting.

2016-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, TODO:
    The ".direct" directive - inside of the parameter string -
    recognize and execute the #v() macro.

  * gputils/dump.c:
    bugfix

  * gpasm/cod.c, gplink/cod.c:
    More or more accurate warning messages.
