@@ -1,3 +1,9 @@
+2016-08-06  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gpcoff.h, libgputils/gpreadobj.c,
+    libgputils/gpsystem.c, libgputils/gpsystem.h,
+    libgputils/gpwriteobj.c:
+    Some simplification and rename.
+
 2016-08-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/directive.c:
     In _do_banksel function, case of PIC16E family use RELOC_MOVLB
